tests/integration/tests/macros/ui/http_error/fail/non_enum.rs
use reinhardt::HttpError;

#[derive(Debug, HttpError)]
struct ApiError;

fn main() {}
